<resources>
    <string name="app_name">CERDAS SPU</string>
    <string name="about_us">Tentang Kami</string>
    <string name="tentang">Hello!\n
Aplikasi ini adalah aplikasi untuk Tugas Akhir kami sebagai mahasiswa di Universitas Atma Jaya Makassar dengan nama Charyn F Handoyo (NIM : 1761003) yang berjudul Perancangan Aplikasi Game Edukasi menggunakan Metode Finite State Machine mengenai Sistem Periodik Unsur (SPU) pada Tabel Periodik Modern. Aplikasi ini juga dibuat guna membantu para siswa untuk bermain sambil belajar. So, please have fun while playing.
Dan jika Anda memiliki pertanyaan atau ide-ide menarik untuk pengembangan aplikasi kami, Silahkan hubungi kami di Email dibawah ini, Terima Kasih.
</string>
    //tpu
    <string name="Rangkuman">"\n <b>TABEL PERIODIK MODERN</b>\n\n\n\n Pada tahun 1913, ilmuan Henry Moseley menemukan nomor atom suatu unsur dengan bantuan sinar X. Dari hasil penelitiannya ini menemukan bahwa kenaikan atom sejalan dengan kenaikan massa atom. Atas dasar penemuannya tersebut Henry Moseley menyusun tabel periodik berdasarkan konfigurasi elektron atau kenaikan nomor atom, terdiri atas dua lajur vetikal dan horizontal. Pada saat perang Dunia I, H.G.J. Moseley menyempurnakan sistem periodik Mendeleev dengan menentukan keperiodikan unsur berdasarkan nomor atom atau muatan inti. Menurut Moseley, jika unsur-unsur disusun berdasarkan kenaikan nomor atom, sifat unsur akan berulang secara periodik. Sistem periodik inilah yang sampai saat ini masih digunakan dan dikenal sebagai Sistem Periodik Modern.\n\n    "</string>
    <string name="tpu1">"\n1.\tPeriode dan Golongan\n\nTabel periode modern terdapat dua lajur yaitu jalur horizontal (periode) dan jalur vertikal (golongan). Sistem periodik modern terdiri dari 7 periode yaitu periode pendek (periode 1, 2, dan 3), periode panjang (periode 4 dan 5), periode sangat panjang (periode 6), dan periode belum lengkap (periode 7). Sedangkan, untuk jalur vertikal (golongan), sistem periodik modern terdiri atas 18 golongan yang dibagi atas dua jenis golongan unsur yaitu golongan utama (golongan A) dan Golongan Transisi (Golongan B). Golongan utama terdiri atas 8 golongan dan golongan transisi terdiri atas 8 golongan ditambah dengan golongan Lantanida (terletak pada golongan IIIB, periode 6) dan golongan Aktinida (terletak pada golongan IIIB, periode 7).\n\n    "</string>
    <string name="tpu2">\n2.\tBlok\n\nSistem periodik modern dikelompokkan dalam blok yaitu blok s, blok p, blok d, dan blok f yang didapatkan dari konfigurasi elektron suatu atom, cara lainnya berupa dari letak unsur pada tabel periodik.\n</string>
    <string name="tpu3">\nBlok s terdapat pada golongan IA dan golongan IIA, blok p terdapat pada golongan IIIA sampai dengan golongan VIIIA, blok d terdapat pada golongan transisi (golongan IB sampai dengan VIIIB), dan blok f terdapat pada golongan Lantanida dan golongan Aktinida.\n</string>
//spu
    <string name="spu1">\n<b>SISTEM PERIODIK UNSUR (SPU)</b>\n\n\n\nPengelompokkan unsur-unsur pada sistem periodik modern memiliki beberapa sifat yang berubah secara periodik. Terdapat sifat pada SPU yaitu sifat atomik yang menentukan sifat kimia sebuah unsur yaitu jari-jari atom, energi ionisasi, keelektronegatifan, dan afinitas elektron.\n\n1. Jari-jari Atom\n\nJari-jari Atom adalah jarak dari inti atom hingga kulit terluar yang ditempati elektron (elektron paling luar). Dalam satu periode, dari kiri ke kanan, jari-jari atom semakin kecil, sedangkan dalam satu golongan dari atas ke bawah, jari-jari atom semakin besar.\n</string>
    <string name="spu2">\n2. Energi Ionisasi \n\nEnergi ionisasi adalah energi minimum yang diperlukan untuk melepaskan elektron yang terikat paling lemah oleh suatu atom atau ion dalam wujud gas. Dalam satu periode, energi ionisasi semakin bertambah dari kiri ke kanan. Sedangkan dalam satu golongan, energi ionisasi semakin kecil dari atas ke bawah. Hal ini disebabkan karena elektron terluar semakin jauh dari inti atom maka, gaya tarik inti semakin lemah.\n</string>
    <string name="spu3">\n3. Keelektronegatifan (KE)\n\nKeelektronegatifan atau elektronegativitas adalah kecenderungan suatu unsur atau atom untuk menarik pasangan elektron dari unsur atau atom lain yang digunakan bersama dalam membentuk ikatan. Dalam satu periode dari kiri ke kanan, keelektronegatifan semakin bertambah, sedangkan dalam satu golongan dari atas ke bawah, keelektronegatifan semakin berkurang.\n</string>
    <string name="spu4">\n4. Afinitas Elektron\n\nAfinitas elektron adalah besarnya energi yang dihasilkan atau dilepaskan apabila suatu unsur atau atom menarik sebuah elektron dalam wujud gas. Dalam satu periode dari kiri ke kanan, afinitas elektron cenderung bertambah, sedangkan dalam satu golongan dari atas ke bawah, afinitas elektron cenderung berkurang. \n</string>

</resources>
